adicao do sentinel

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "modules/PX4-Autopilot"]
 	path = modules/PX4-Autopilot
 	url = git@github.com:ProjetoDronesCerise/PX4-Autopilot.git
+	branch = v1.16.0
