--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = modules/PX4-Autopilot
 	url = git@github.com:ProjetoDronesCerise/PX4-Autopilot.git
 	branch = v1.16.0
+[submodule "modules/gazebo_models_worlds_collection"]
+	path = modules/gazebo_models_worlds_collection
+	url = https://github.com/leonhartyao/gazebo_models_worlds_collection.git
